--- a/contrib/snap/pyrexcoind.conf
+++ b/contrib/snap/pyrexcoind.conf
@@ -1,6 +1,6 @@
-# Configuration for monerod
+# Configuration for pyrexcoind
 # Syntax: any command line option may be specified as 'clioptionname=value'.
-# See 'monerod --help' for all available options.
+# See 'pyrexcoind --help' for all available options.
 
 # Overrided by snap:
 # data-dir=/var/lib/monero
