--- a/contrib/snap/snapcraft.yaml
+++ b/contrib/snap/snapcraft.yaml
@@ -1,8 +1,8 @@
 name: monero
 version: 0.11.1.0-1
-summary: "Monero: the secure, private, untraceable cryptocurrency https://getmonero.org"
+summary: "Pyrexcoin: the secure, private, untraceable cryptocurrency http://pyrexcoin.com/"
 description: |
-    Monero is a private, secure, untraceable, decentralised digital currency.
+    Pyrexcoin is a private, secure, untraceable, decentralised digital currency.
     You are your bank, you control your funds, and nobody can trace your transfers
     unless you allow them to do so.
 grade: devel
