--- a/contrib/snap/snapcraft.yaml
+++ b/contrib/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: pyrexcoin
-version: 0.11.1.0-1
-summary: "Pyrexcoin: the secure, private, untraceable cryptocurrency https://getmonero.org"
+version: 0.12
+summary: "Pyrexcoin: the secure, private, untraceable cryptocurrency"
 description: |
     Pyrexcoin is a private, secure, untraceable, decentralised digital currency.
     You are your bank, you control your funds, and nobody can trace your transfers
