--- a/src/version.cpp.in
+++ b/src/version.cpp.in
@@ -1,6 +1,6 @@
 #define DEF_MONERO_VERSION_TAG "@VERSIONTAG@"
-#define DEF_MONERO_VERSION "0.13.0.4"
-#define DEF_MONERO_RELEASE_NAME "Cryptocosm Bullet"
+#define DEF_MONERO_VERSION "0.14.0.2"
+#define DEF_MONERO_RELEASE_NAME "Cryptocosm Butterfly"
 #define DEF_MONERO_VERSION_FULL DEF_MONERO_VERSION "-" DEF_MONERO_VERSION_TAG
 
 #include "version.h"
